@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.410 2013/12/08 13:22:38 bad Exp $
+# $NetBSD: Makefile,v 1.411 2013/12/09 00:08:57 wiz Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -40,7 +40,6 @@ SUBDIR+=	deskbar-applet
 SUBDIR+=	dgpsip
 SUBDIR+=	dialog
 SUBDIR+=	dirdiff
-SUBDIR+=	dnetc
 SUBDIR+=	dotfile
 SUBDIR+=	dpkg
 SUBDIR+=	dt
